@@ -75,7 +75,6 @@ public class ManageServlet extends JAMWikiServlet {
 		Topic topic = WikiBase.getHandler().lookupTopic(virtualWiki, topicName, true);
 		String contents = "";
 		topic.setTopicContent(contents);
-		topic.setDeleteDate(new Timestamp(System.currentTimeMillis()));
 		TopicVersion topicVersion = new TopicVersion(Utilities.currentUser(request), request.getRemoteAddr(), request.getParameter("deleteComment"), contents);
 		topicVersion.setEditType(TopicVersion.EDIT_DELETE);
 		WikiBase.getHandler().deleteTopic(topic, topicVersion, true);
@@ -124,7 +123,6 @@ public class ManageServlet extends JAMWikiServlet {
 		}
 		String contents = previousVersion.getVersionContent();
 		topic.setTopicContent(contents);
-		topic.setDeleteDate(null);
 		TopicVersion topicVersion = new TopicVersion(Utilities.currentUser(request), request.getRemoteAddr(), request.getParameter("undeleteComment"), contents);
 		topicVersion.setEditType(TopicVersion.EDIT_UNDELETE);
 		WikiBase.getHandler().undeleteTopic(topic, topicVersion, true);
